package com.hp.ews.model; public class PriceRequest { public String sku; public String market; public String currency; public String effectiveDate; }
