package com.hp.ews.model; public class PriceResponse { public String sku; public String currency; public String price; public String effectiveDate; }
