package com.hp.ews.service.impl; import com.hp.ews.service.PriceService; import com.hp.ews.model.*; import jakarta.jws.WebService; import java.util.*; @WebService(endpointInterface="com.hp.ews.service.PriceService", serviceName="PriceService", targetNamespace="http://hp.com/ews/price/1") public class PriceServiceImpl implements PriceService { public List<PriceResponse> getPrice(PriceRequest r) throws EwsFault { PriceResponse p=new PriceResponse(); p.sku=r.sku; p.currency="USD"; p.price="129.99"; p.effectiveDate="2025-01-01"; return java.util.List.of(p);} public String submitPriceJob(String m) throws EwsFault { return "JOB-"+java.util.UUID.randomUUID(); } }
