ALTER SESSION SET CURRENT_SCHEMA=PRICEHUB;
CREATE TABLE LIST_PRICE (
  ID VARCHAR2(36) PRIMARY KEY,
  SKU VARCHAR2(64) NOT NULL,
  MARKET VARCHAR2(10),
  CURRENCY CHAR(3) NOT NULL,
  PRICE NUMBER(18,4) NOT NULL,
  EFFECTIVE_DATE DATE NOT NULL
);
CREATE TABLE PRICE_JOB (
  JOB_ID VARCHAR2(36) PRIMARY KEY,
  MARKET VARCHAR2(10),
  REQUESTED_AT TIMESTAMP DEFAULT SYSTIMESTAMP,
  STATUS VARCHAR2(10)
);
